// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductGallery.Content> page should pass initialSlide prop 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductGalleryContent)
    initialSlide={3}
  >
    <ProductGalleryContent
      dispatch={[Function]}
      images={
        Array [
          Object {
            "height": 1024,
            "sources": Array [
              "foo1024",
              "bar1024",
            ],
            "width": 1024,
          },
          Object {
            "height": 2048,
            "sources": Array [
              "foo2048",
              "bar2048",
            ],
            "width": 2048,
          },
        ]
      }
      initialSlide={3}
      product={
        Object {
          "id": 123,
        }
      }
    >
      <div
        className="css-f7yea6"
      >
        <Component
          className="css-sa13d4"
          classNames={
            Object {
              "container": "css-sa13d4",
              "indicator": "css-vsp2nx",
            }
          }
          indicators={true}
          initialSlide={3}
          loop={true}
        >
          <div
            className="css-1vgjawn"
            key="gallery-0"
          >
            <Image
              alt={null}
              animating={true}
              backgroundColor="#f2f2f2"
              className=""
              forcePlaceholder={false}
              highestResolutionLoaded={[Function]}
              onError={null}
              onLoad={null}
              ratio={null}
              resolutions={
                Array [
                  Object {
                    "blur": 2,
                    "height": 50,
                    "width": 50,
                  },
                  Object {
                    "height": 440,
                    "width": 440,
                  },
                ]
              }
              src={null}
              srcmap={
                Array [
                  "foo1024",
                  "foo2048",
                ]
              }
              transition={null}
            >
              <div
                className="css-hekcyy "
              />
            </Image>
          </div>
          <div
            className="css-1vgjawn"
            key="gallery-1"
          >
            <Image
              alt={null}
              animating={true}
              backgroundColor="#f2f2f2"
              className=""
              forcePlaceholder={false}
              highestResolutionLoaded={[Function]}
              onError={null}
              onLoad={null}
              ratio={null}
              resolutions={
                Array [
                  Object {
                    "blur": 2,
                    "height": 50,
                    "width": 50,
                  },
                  Object {
                    "height": 440,
                    "width": 440,
                  },
                ]
              }
              src={null}
              srcmap={
                Array [
                  "bar1024",
                  "bar2048",
                ]
              }
              transition={null}
            >
              <div
                className="css-hekcyy "
              />
            </Image>
          </div>
        </Component>
      </div>
    </ProductGalleryContent>
  </Connect(ProductGalleryContent)>
</Provider>
`;

exports[`<ProductGallery.Content> page should render ZoomPanSlider with images 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductGalleryContent)
    initialSlide={0}
  >
    <ProductGalleryContent
      dispatch={[Function]}
      images={
        Array [
          Object {
            "height": 1024,
            "sources": Array [
              "foo1024",
              "bar1024",
            ],
            "width": 1024,
          },
          Object {
            "height": 2048,
            "sources": Array [
              "foo2048",
              "bar2048",
            ],
            "width": 2048,
          },
        ]
      }
      initialSlide={0}
      product={
        Object {
          "id": 123,
        }
      }
    >
      <div
        className="css-f7yea6"
      >
        <Component
          className="css-sa13d4"
          classNames={
            Object {
              "container": "css-sa13d4",
              "indicator": "css-vsp2nx",
            }
          }
          indicators={true}
          initialSlide={0}
          loop={true}
        >
          <div
            className="css-1vgjawn"
            key="gallery-0"
          >
            <Image
              alt={null}
              animating={true}
              backgroundColor="#f2f2f2"
              className=""
              forcePlaceholder={false}
              highestResolutionLoaded={[Function]}
              onError={null}
              onLoad={null}
              ratio={null}
              resolutions={
                Array [
                  Object {
                    "blur": 2,
                    "height": 50,
                    "width": 50,
                  },
                  Object {
                    "height": 440,
                    "width": 440,
                  },
                ]
              }
              src={null}
              srcmap={
                Array [
                  "foo1024",
                  "foo2048",
                ]
              }
              transition={null}
            >
              <div
                className="css-hekcyy "
              />
            </Image>
          </div>
          <div
            className="css-1vgjawn"
            key="gallery-1"
          >
            <Image
              alt={null}
              animating={true}
              backgroundColor="#f2f2f2"
              className=""
              forcePlaceholder={false}
              highestResolutionLoaded={[Function]}
              onError={null}
              onLoad={null}
              ratio={null}
              resolutions={
                Array [
                  Object {
                    "blur": 2,
                    "height": 50,
                    "width": 50,
                  },
                  Object {
                    "height": 440,
                    "width": 440,
                  },
                ]
              }
              src={null}
              srcmap={
                Array [
                  "bar1024",
                  "bar2048",
                ]
              }
              transition={null}
            >
              <div
                className="css-hekcyy "
              />
            </Image>
          </div>
        </Component>
      </div>
    </ProductGalleryContent>
  </Connect(ProductGalleryContent)>
</Provider>
`;
